feat: atualizações da SEO

--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="referrer" content="no-referrer" />
-      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <link rel="icon" type="image/svg+xml" href="/burguer.ico" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
-      <title>Kenzie Burguer V2</title>
+      <title>Fast Burger</title>
+
+      <meta name="description" content="Fast Burger - O melhor hambúrguer da cidade!" />
+      <meta name="keywords" content="hambúrguer, fast food, comida rápida, lanche, delivery" />
+      <meta name="author" content="Daniel Viana" />
+
+
+      <!-- Open Graph -->
+      <meta property="og:title" content="Fast Burger - O melhor hambúrguer da cidade!" />
+      <meta property="og:description" content="Faça seu pedido e receba em casa o melhor hambúrguer artesanal!" />
+      <meta property="og:image" content="/burger-apresentation.png" />
+      <meta property="og:url" content="https://burguer-typescript.vercel.app/" />
+      <meta property="og:type" content="website" />
    </head>
    <body>
       <div id="root"></div>
