feat: atualização SEO (imagem da meta)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Open Graph -->
       <meta property="og:title" content="Fast Burger - O melhor hambúrguer da cidade!" />
       <meta property="og:description" content="Faça seu pedido e receba em casa o melhor hambúrguer artesanal!" />
-      <meta property="og:image" content="/burger-apresentation.png" />
+      <meta property="og:image" content="https://burguer-typescript.vercel.app/burger-apresentation.png" />
       <meta property="og:url" content="https://burguer-typescript.vercel.app/" />
       <meta property="og:type" content="website" />
    </head>
